# harmony_proxy

./: .gitignore  AGENTS.md  BUILDING.md  README.md  pyproject.toml  requirements.txt
.agent/: DEBUGGING_NOTES.md  execplan_harmony_proxy_alignment.md  execplan_kilocode_tool_role.md
src/harmony_proxy/: __main__.py  app.py  config.py  harmony_fallback.py  metrics.py  parser.py  sse.py  trace.py  upstream.py
tests/: __init__.py  conftest.py  test_app_trace.py  test_app_utils.py  test_config.py  test_harmony_fallback.py  test_integration_llm.py  test_metrics.py  test_parser.py  test_trace.py  test_upstream.py
