[project]
name = "harmony-proxy"
version = "0.1.0"
description = "Proxy that normalizes Harmony-formatted GPT-OSS responses into OpenAI Chat Completions."
authors = [{ name = "Harmony Proxy Maintainer" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0,<0.112.0",
    "uvicorn>=0.22.0,<0.29.0",
    "httpx>=0.25.0,<0.28.0",
    "pydantic>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.19",
    "openai-harmony>=0.0.4",
]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
